Cambio al archivo hello.yml

--- a/docassemble/testinterview/data/questions/hello.yml
+++ b/docassemble/testinterview/data/questions/hello.yml
@@ -2,6 +2,7 @@
 question: Hello, ${ customer }!
 subquestion: |
   Your ID is ${ id } and your age is ${ age }. ${ content }
+  Aquí hice cambios desde el local
 attachment:
   name: A formal letter for ${ customer }
   filename: letter
